--- a/templates/400.tt
+++ b/templates/400.tt
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hatena::Mackerel</title>
-    : my $minjs = cm($c.config, 'env') == 'production' ? '.min.js' : '.js'
-    <script src="<: $c.uri_for('/js/jquery' ~ $minjs) :>"></script>
-    <link rel="stylesheet" href="<: $c.uri_for('/css/bootstrap.css') :>">
-    <link rel="stylesheet" href="<: $c.uri_for('/css/app.css') :>">
+    <title>[% $c.config('service_name') %]</title>
+
+    [% INCLUDE "_javascript.tt" %]
+    [% INCLUDE "_css.tt" %]
   </head>
   <body>
     <p class="error-box"><: $message :></p>
